# transcodeck

./: Cargo.toml  Dockerfile  README.adoc  docker-compose.yml  flake.nix
entity/: Cargo.toml
migration/: Cargo.toml
migrations/2024-03-09-185940_create_base_tables/: down.sql  up.sql
src/: add_media.rs  add_transcode.rs  daemon.rs  main.rs  schema.rs
src/model/: fragment.rs  media.rs  mod.rs  transcoding_fragment.rs  transcoding_job.rs
transcodeck-cli/: Cargo.toml
transcodeck-cli/src/: main.rs
