[package]
name = "transcodeck"
version = "0.1.0"
author = "FuseTim <fusetim.log@gmx.com>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.10.0"
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive", "env"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
